# DSInDerCloud

./: build-images.sh  commands  deploy.sh
kedro_pipeline/: Dockerfile
kedro_pipeline/churn-prediction/: Dockerfile  README.md  pyproject.toml  requirements.txt
kedro_pipeline/churn-prediction/conf/base/: catalog.yml
kedro_pipeline/churn-prediction/src/churn_prediction/: __init__.py  __main__.py  settings.py
kedro_pipeline/churn-prediction/src/churn_prediction/pipelines/clean_data/: nodes.py  pipeline.py
kedro_pipeline/churn-prediction/src/churn_prediction/pipelines/train_model/: nodes.py  pipeline.py
kuberenetes/: kedro-job.yaml  model-service-deployment.yaml  model-service.yaml  pvc.yaml
kubernetes/: model-service-deployment.yaml  model-service.yaml
model_service/: Dockerfile  app.py  requirements
model_service/data/: churn_model.pkl
